--- a/PodcastDigest.API/appsettings.json
+++ b/PodcastDigest.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "Cohere": {
-    "ApiKey": "10TRKgUBq5GE0wJ8stvuqJBDGZNvGfsYOcwjjchm"
+    "ApiKey": "your-api-key"
   }
 }
